--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section class="hero-section d-flex flex-column align-items-start position-relative">
 
   <!-- Custom Navbar Container -->
-  <nav class="navbar navbar-expand-lg bg-white px-3 py-2 custom-navbar rounded-pill ">
+  <nav class="navbar navbar-expand-lg bg-white px-3 py-2 custom-navbar rounded-pill">
     <div class="container">
       <!-- Brand Logo -->
       <a class="navbar-brand d-flex align-items-center" href="#">
@@ -30,23 +30,15 @@
       <!-- Collapsible navbar links -->
       <div class="collapse navbar-collapse justify-content-center gap-3" id="navbarNav">
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0 gap-4">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Distributors</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">How it Works</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Price</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Distributors</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">How it Works</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Price</a></li>
         </ul>
 
         <!-- Right-side buttons -->
         <div class="d-flex align-items-center gap-3">
-          <a href="#" class="text-dark text-decoration-none px-5">Sign in</a>
+          <a href="#" class="text-dark text-decoration-none px-3">Sign in</a>
           <a href="#" class="btn btn-primary rounded-pill px-3 py-2 small btn-sm">Get Started</a>
         </div>
       </div>
@@ -54,10 +46,10 @@
   </nav>
 
   <!-- Hero Content -->
-  <div class="container mt-auto mb-auto">
-    <div class="row align-items-center">
+  <div class="container h-100 d-flex align-items-center justify-content-center">
+    <div class="row align-items-center w-100">
       <!-- Left Column: Text -->
-      <div class="col-md-6 text-white text-center text-md-start mb-5 mb-md-0">
+      <div class="col-md-6 text-white text-center text-md-start mb-4 mb-md-0">
         <h1 class="fw-bold">Building India's Fastest <br />Distribution Network</h1>
         <p class="lead mt-3">A Full Stack B2B Marketplace</p>
       </div>
@@ -69,6 +61,7 @@
     </div>
   </div>
 </section>
+
 
 <!-- Auto-Scrolling Brand Logos -->
 <div class="brand-marquee-wrapper mt-3">
