--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section class="hero-section d-flex flex-column align-items-start position-relative">
 
   <!-- Custom Navbar Container -->
-  <nav class="navbar navbar-expand-lg bg-white px-3 py-2 custom-navbar rounded-pill">
+  <nav class="navbar navbar-expand-lg  px-3 py-2 custom-navbar  ">
     <div class="container">
       <!-- Brand Logo -->
       <a class="navbar-brand d-flex align-items-center" href="#">
@@ -37,7 +37,7 @@
         </ul>
 
         <!-- Right-side buttons -->
-        <div class="d-flex align-items-center gap-3">
+        <div class="d-flex align-items-center gap-3 right_side_button">
           <a href="#" class="text-dark text-decoration-none px-3">Sign in</a>
           <a href="#" class="btn btn-primary rounded-pill px-3 py-2 small btn-sm">Get Started</a>
         </div>
@@ -472,15 +472,15 @@
           <!-- FAQ Item 1 -->
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
-              <button class="accordion-button " type="button" data-bs-toggle="collapse"
-                      data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                 Where can I watch?
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne"
                  data-bs-parent="#faqAccordion">
               <div class="accordion-body">
-                Nibh quisque suscipit fermentum metus nulla cras porttitor euismod nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
+                Nibh quisque nulla cras porttitor euismod nulla. Orci, dictumst nec aliquet id ullamcorper venenatis.
               </div>
             </div>
           </div>
@@ -490,7 +490,7 @@
             <h2 class="accordion-header" id="headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Mauris id nibh eu fermentum mattis purus?
+                Mauris id nibh eu  purus?
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -530,8 +530,8 @@
     <div class="container">
       <div class="row gy-4">
         <!-- Solutions -->
-        <div class="col-12 col-md-3">
-          <h5 class="fw-bold">Solutions</h5>
+        <div class="col-12 col-md-3  header"  >
+          <h5 class="fw-bold  text-primary">Solutions</h5>
           <ul class="list-unstyled mt-3">
             <li><a href="#" class="footer-link">Distribution</a></li>
             <li><a href="#" class="footer-link">Marketing</a></li>
@@ -542,29 +542,29 @@
         </div>
 
         <!-- Get in Touch -->
-        <div class="col-12 col-md-3">
-          <h5 class="fw-bold">Get in Touch</h5>
-          <ul class="list-unstyled mt-3">
-            <li><i class="fas fa-map-marker-alt me-2 text-primary"></i>8819 Ohio St. South Gate,<br>CA 90280</li>
-            <li class="mt-2"><i class="fas fa-envelope me-2 text-primary"></i>business@setlup.in</li>
-            <li class="mt-2"><i class="fas fa-phone me-2 text-primary"></i>+91 93414 77175</li>
+        <div class="col-12 col-md-3  header">
+          <h5 class="fw-bold text-primary ">Get in Touch</h5>
+          <ul class="list-unstyled mt-3 ">
+            <li class="mt-2 get_touch"><i class="fas fa-map-marker-alt me-2 text-primary"></i>8819 Ohio St. South Gate,<br>CA 90280</li>
+            <li class="mt-2 get_touch "><i class="fas fa-envelope me-2 text-primary"></i>business@setlup.in</li>
+            <li class="mt-2 get_touch"><i class="fas fa-phone me-2 text-primary"></i>+91 93414 77175</li>
           </ul>
         </div>
 
         <!-- Social Media -->
-        <div class="col-12 col-md-3">
-          <h5 class="fw-bold">Social Media</h5>
-          <div class="d-flex mt-3 gap-3">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
+        <div class="col-12 col-md-3 header  ">
+          <h5 class="fw-bold text-primary">Social Media</h5>
+          <div class="d-flex mt-3 gap-3 footer-social">
+            <a href="#" class="social-icon"><i class="fab fa-facebook-f "></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-twitter "></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-instagram "></i></a>
+            <a href="#" class="social-icon"><i class="fab fa-youtube  "></i></a>
           </div>
         </div>
 
         <!-- Newsletter -->
-        <div class="col-12 col-md-3">
-          <h5 class="fw-bold">Join a Newsletter</h5>
+        <div class="col-12 col-md-3 header ">
+          <h5 class="fw-bold text-primary">Join a Newsletter</h5>
           <form class="mt-3">
             <label for="newsletter" class="form-label">Your Email</label>
             <input type="email" class="form-control bg-dark border-primary text-white" id="newsletter" placeholder="Enter Your Email">
