--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>B2B Marketplace Hero Section</title>
+  <title>Setlup</title>
+  <link rel="icon" href="/images/logo.png" type="image/png" />
+
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="/css/bootstrap.css " />
   <!-- Font Awesome CDN (v6.x) -->
@@ -66,18 +68,18 @@
 <!-- Auto-Scrolling Brand Logos -->
 <div class="brand-marquee-wrapper mt-3">
     <div class="brand-marquee d-flex">
-      <img src="/images/ACCENTURE.png" alt="Accenture" class="brand-logo me-4" />
-      <img src="/images/AMazon.png" alt="Amazon" class="brand-logo me-4" />
-      <img src="/images/Booking.png" alt="Booking.com" class="brand-logo me-4" />
-      <img src="/images/DHL.png" alt="DHL" class="brand-logo me-4" />
-      <img src="/images/KPMG.png" alt="KPMG" class="brand-logo me-4" />
-      <img src="/images/DHL.png" alt="DHL 2" class="brand-logo me-4" />
+      <img src="/images/ACCENTURE.png" alt="Accenture" class="brand-logo mx-5" />
+      <img src="/images/AMazon.png" alt="Amazon" class="brand-logo mx-5" />
+      <img src="/images/Booking.png" alt="Booking.com" class="brand-logo mx-5" />
+      <img src="/images/DHL.png" alt="DHL" class="brand-logo mx-5" />
+      <img src="/images/KPMG.png" alt="KPMG" class="brand-logo mx-5" />
+      <img src="/images/DHL.png" alt="DHL 2" class="brand-logo mx-5" />
       <!-- Duplicate logos for seamless looping -->
-      <img src="/images/ACCENTURE.png" alt="Accenture" class="brand-logo me-4" />
-      <img src="/images/AMazon.png" alt="Amazon" class="brand-logo me-4" />
-      <img src="/images/Booking.png" alt="Booking.com" class="brand-logo me-4" />
-      <img src="/images/DHL.png" alt="DHL" class="brand-logo me-4" />
-      <img src="/images/KPMG.png" alt="KPMG" class="brand-logo me-4" />
+      <img src="/images/ACCENTURE.png" alt="Accenture" class="brand-logo mx-5" />
+      <img src="/images/AMazon.png" alt="Amazon" class="brand-logo mx-5" />
+      <img src="/images/Booking.png" alt="Booking.com" class="brand-logo mx-5" />
+      <img src="/images/DHL.png" alt="DHL" class="brand-logo mx-5" />
+      <img src="/images/KPMG.png" alt="KPMG" class="brand-logo mx-5" />
     </div>
   </div>
   
@@ -95,21 +97,30 @@
     <div class="container">
       <div class="row g-4 justify-content-center">
         
-        <!-- Box 1 -->
-        <div class="col-12 col-sm-6 col-lg-4">
-          <div class="feature-box text-center p-4 mb-3 rounded-4">
-            <img src="images/Brand.png" alt="Brands" class="img-fluid mb-3">
-            <h5 class="mb-3">Brands</h5>
-            <a href="#" class="btn btn-light btn-sm px-4 rounded-pill">Get Started</a>
-          </div>
-        </div>
+       <!-- Box 1 -->
+         <div class="col-12 col-sm-6 col-lg-4">
+           <div class="feature-box text-center p-4 mb-3 rounded-4">
+             <img src="images/Brand.png" alt="Brands" class="img-fluid mb-3">
+
+             <!-- Flex container to align text and button side by side -->
+             <div class="d-flex justify-content-center align-items-center gap-2">
+               <h5 class="mb-0 px-3">Brands</h5>
+               <a href="#" class="btn btn-light btn-sm px-3 rounded-pill">Get Started</a>
+             </div>
+           </div>
+         </div>
+         
   
         <!-- Box 2 -->
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="feature-box text-center p-4 mb-3 rounded-4">
             <img src="images/Distributor.png" alt="Distributor" class="img-fluid mb-3">
-            <h5 class="mb-3">Distributor</h5>
-            <a href="#" class="btn btn-light btn-sm px-4 rounded-pill">Get Started</a>
+
+            <!-- Flex container to align text and button side by side -->
+             <div class="d-flex justify-content-center align-items-center gap-2">
+            <h5 class="mb-0 px-3">Distributor</h5>
+            <a href="#" class="btn btn-light btn-sm px-3 rounded-pill">Get Started</a>
+            </div>
           </div>
         </div>
   
@@ -117,8 +128,12 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="feature-box text-center p-4 mb-3 rounded-4">
             <img src="images/Retailer.png" alt="Retail" class="img-fluid mb-3">
-            <h5 class="mb-3">Retail</h5>
-            <a href="#" class="btn btn-light btn-sm px-4 rounded-pill">Get Started</a>
+
+            <!-- Flex container to align text and button side by side -->
+             <div class="d-flex justify-content-center align-items-center gap-2">
+            <h5 class="mb-0 px-3">Retail</h5>
+            <a href="#" class="btn btn-light btn-sm px-3 rounded-pill">Get Started</a>
+            </div>
           </div>
         </div>
   
@@ -286,12 +301,12 @@
 
         <!-- Step 1 -->
         <div class="d-flex align-items-start mb-4">
-          <div class="icon-wrapper rounded-circle shadow-sm me-3">
-            <img src="/images/pmf.png" alt="Icon 1" class="img-fluid">
+          <div class="icon-wrapper rounded-circle shadow-sm me-3 ">
+            <img src="/images/pmf.png" alt="Icon 1" class="img-fluid" >
           </div>
-          <div>
-            <h6 class="fw-bold mb-1">Sampling & Identifying PMF</h6>
-            <p class="mb-0 small">Simplified & fast Onboarding process. We call it a plug-n-play distribution network for a reason!</p>
+          <div class="mt-3">
+            <h6 class="fw-bold mb-0 mx-4 ">Sampling & Identifying PMF</h6>
+            <p class="mb-0 small mx-4">Simplified & fast Onboarding process. We call it a plug-n-play distribution network for a reason!</p>
           </div>
         </div>
 
@@ -300,9 +315,9 @@
           <div class="icon-wrapper rounded-circle shadow-sm me-3">
             <img src="/images/startselling.png" alt="Icon 2" class="img-fluid">
           </div>
-          <div>
-            <h6 class="fw-bold mb-1">Brand On Boarding</h6>
-            <p class="mb-0 small">Pre-launch in-app surveys & feedback directly from retailers and consumers. Launching a product where it fits!</p>
+          <div class="mt-3">
+            <h6 class="fw-bold mb-0 mx-4">Brand On Boarding</h6>
+            <p class="mb-0 small mx-4">Pre-launch in-app surveys & feedback directly from retailers and consumers. Launching a product where it fits!</p>
           </div>
         </div>
 
@@ -322,8 +337,8 @@
           <div class="d-flex align-items-start">
             <img src="/images/cross-selling 1.png" alt="Icon 1" class="feature-icon me-3 mb-5" />
             <div>
-              <h5 class="feature-title">Product Listing</h5>
-              <p class="feature-desc">Pre-launch in-app surveys & feedback directly from retailers and consumers. Launching a product where it fits!</p>
+              <h5 class="feature-title mx-4">Product Listing</h5>
+              <p class="feature-desc mx-4">Pre-launch in-app surveys & feedback directly from retailers and consumers. Launching a product where it fits!</p>
             </div>
           </div>
 
@@ -331,8 +346,8 @@
           <div class="d-flex align-items-start">
             <img src="/images/startselling.png" alt="Icon 2" class="feature-icon me-3 mb-5" />
             <div>
-              <h5 class="feature-title">Start Selling</h5>
-              <p class="feature-desc">to our wide network of retailers & distributors</p>
+              <h5 class="feature-title mx-4">Start Selling</h5>
+              <p class="feature-desc mx-4">to our wide network of retailers & distributors</p>
             </div>
           </div>
 
@@ -340,8 +355,8 @@
           <div class="d-flex align-items-start">
             <img src="/images/cross-selling 1.png" alt="Icon 3" class="feature-icon me-3 mb-5" />
             <div>
-              <h5 class="feature-title">Product Listing</h5>
-              <p class="feature-desc">Pre-launch in-app surveys & feedback directly from retailers and consumers. Launching a product where it fits!</p>
+              <h5 class="feature-title mx-4">Product Listing</h5>
+              <p class="feature-desc mx-4">Pre-launch in-app surveys & feedback directly from retailers and consumers. Launching a product where it fits!</p>
             </div>
           </div>
         </div>
@@ -545,9 +560,9 @@
         <div class="col-12 col-md-3  header">
           <h5 class="fw-bold text-primary ">Get in Touch</h5>
           <ul class="list-unstyled mt-3 ">
-            <li class="mt-2 get_touch"><i class="fas fa-map-marker-alt me-2 text-primary"></i>8819 Ohio St. South Gate,<br>CA 90280</li>
-            <li class="mt-2 get_touch "><i class="fas fa-envelope me-2 text-primary"></i>business@setlup.in</li>
-            <li class="mt-2 get_touch"><i class="fas fa-phone me-2 text-primary"></i>+91 93414 77175</li>
+            <li class="mt-2 get_touch "><i class="fas fa-map-marker-alt me-2 text-primary mx-2"></i>8819 Ohio St. South Gate,<br>CA 90280</li>
+            <li class="mt-2 get_touch "><i class="fas fa-envelope me-2 text-primary mx-2"></i>business@setlup.in</li>
+            <li class="mt-2 get_touch"><i class="fas fa-phone me-2 text-primary mx-2"></i>+91 93414 77175</li>
           </ul>
         </div>
 
