--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 <!-- Auto-Scrolling Brand Logos -->
 <div class="brand-marquee-wrapper mt-3">
-    <div class="brand-marquee d-flex">
+    <div class="brand-marquee  ">
       <img src="/images/ACCENTURE.png" alt="Accenture" class="brand-logo mx-5" />
       <img src="/images/AMazon.png" alt="Amazon" class="brand-logo mx-5" />
       <img src="/images/Booking.png" alt="Booking.com" class="brand-logo mx-5" />
@@ -209,76 +209,75 @@
       <!-- Features -->
       <div class="row gy-5">
   
-        <!-- Feature 1 -->
-        <div class="col-md-12 d-flex">
-          <div class="icon-box position-relative me-3 mt-n5 ">
-            <div class="number-badge mt-n5">01</div>
-            <div class="icon-circle mt-n5">
-              <img src="/images/hand-shake 1.png" alt="Buyers & Sellers" class="img-fluid ">
-            </div>
-          </div>
-          <div class="mb-5">
-            <h5 class="fw-bold ">Network of <span class="text-primary">Buyers & Sellers</span></h5>
-            <p class="text-muted  ">Get instant access to an established network of distributors & retailers, always looking for new opportunities.</p>
-          </div>
-        </div>
-  
-        <!-- Feature 2 -->
-        <div class="col-md-12 d-flex">
-          <div class="icon-box position-relative me-3 mt-n5">
-            <div class="number-badge mt-n5">02</div>
-            <div class="icon-circle mt-n5">
-              <img src="/images/shop 1.png" alt="Retail Execution" class="img-fluid">
-            </div>
-          </div>
-          <div class="mb-5">
-            <h5 class="fw-bold ">Retail Execution</h5>
-            <p class="text-muted ">Get instant access to an established network of distributors & retailers, always looking for new opportunities.</p>
-          </div>
-        </div>
-  
-        <!-- Feature 3 -->
-        <div class="col-md-12 d-flex">
-          <div class="icon-box position-relative me-3 mt-n5">
-            <div class="number-badge mt-n5">03</div>
-            <div class="icon-circle mt-n5">
-              <img src="/images/software-developer 1.png" alt="Tech Stack" class="img-fluid">
-            </div>
-          </div>
-          <div class="mb-5">
-            <h5 class="fw-bold ">Tech <span class="text-primary">Stack</span></h5>
-            <p class="text-muted ">Get instant access to an established network of distributors & retailers, always looking for new opportunities.</p>
-          </div>
-        </div>
-  
-        <!-- Feature 4 -->
-        <div class="col-md-12 d-flex">
-          <div class="icon-box position-relative me-3 mt-n5">
-            <div class="number-badge mt-n5">04</div>
-            <div class="icon-circle mt-n5">
-              <img src="/images/money 2.png" alt="Tech Stack" class="img-fluid">
-            </div>
-          </div>
-          <div class="mb-5">
-            <h5 class="fw-bold ">Finance</h5>
-            <p class="text-muted ">Get instant access to an established network of distributors & retailers, always looking for new opportunities.</p>
-          </div>
-        </div>
-  
-            <!-- Feature 5 -->
-                 <div class="col-md- d-flex">
-                   <div class="icon-box position-relative me-3 mt-n5">
-                     <div class="number-badge mt-n5">05</div>
-                     <div class="icon-circle mt-n5">
-                       <img src="/images/supply-chain.png" alt="Tech Stack" class="img-fluid">
-                     </div>
-                   </div>
-                   <div class="mb-5">
-                     <h5 class="fw-bold ">Optimized <span class="text-primary">Logistics</span></h5>
-                     <p class="text-muted ">Get instant access to an established network of distributors & retailers, always looking for new opportunities.</p>
-                   </div>
-                 </div>
+        <!-- Feature 1 (Normal) -->
+<div class="col-md-12 d-flex">
+  <div class="icon-box position-relative me-3 mt-n5">
+    <div class="number-badge mt-n5">01</div>
+    <div class="icon-circle mt-n5">
+      <img src="/images/hand-shake 1.png" alt="Buyers & Sellers" class="img-fluid">
+    </div>
+  </div>
+  <div class="mb-5 network">
+    <h5 class="fw-bold">Network of <span class="text-primary">Buyers & Sellers</span></h5>
+    <p class="text-muted">Get instant access to an established network of distributors & retailers, always looking for new opportunities.</p>
+  </div>
+</div>
 
+<!-- Feature 2 (Reversed) -->
+<div class="col-md-12 d-flex flex-row-reverse">
+  <div class="icon-box position-relative ms-3 mt-n5">
+    <div class="number-badge mt-n5">02</div>
+    <div class="icon-circle mt-n5">
+      <img src="/images/shop 1.png" alt="Retail Execution" class="img-fluid">
+    </div>
+  </div>
+  <div class="mb-5 network">
+    <h5 class="fw-bold">Retail Execution</h5>
+    <p class="text-muted">Get instant access to an established network of distributors & retailers, always looking for new opportunities.</p>
+  </div>
+</div>
+
+<!-- Feature 3 (Normal) -->
+<div class="col-md-12 d-flex">
+  <div class="icon-box position-relative me-3 mt-n5">
+    <div class="number-badge mt-n5">03</div>
+    <div class="icon-circle mt-n5">
+      <img src="/images/software-developer 1.png" alt="Tech Stack" class="img-fluid">
+    </div>
+  </div>
+  <div class="mb-5 network">
+    <h5 class="fw-bold">Tech <span class="text-primary">Stack</span></h5>
+    <p class="text-muted">Get instant access to an established network of distributors & retailers, always looking for new opportunities.</p>
+  </div>
+</div>
+
+<!-- Feature 4 (Reversed) -->
+<div class="col-md-12 d-flex flex-row-reverse">
+  <div class="icon-box position-relative ms-3 mt-n5">
+    <div class="number-badge mt-n5">04</div>
+    <div class="icon-circle mt-n5">
+      <img src="/images/money 2.png" alt="Tech Stack" class="img-fluid">
+    </div>
+  </div>
+  <div class="mb-5 network">
+    <h5 class="fw-bold">Finance</h5>
+    <p class="text-muted">Get instant access to an established network of distributors & retailers, always looking for new opportunities.</p>
+  </div>
+</div>
+
+<!-- Feature 5 (Normal) -->
+<div class="col-md-12 d-flex">
+  <div class="icon-box position-relative me-3 mt-n5">
+    <div class="number-badge mt-n5">05</div>
+    <div class="icon-circle mt-n5">
+      <img src="/images/supply-chain.png" alt="Tech Stack" class="img-fluid">
+    </div>
+  </div>
+  <div class="mb-5 network">
+    <h5 class="fw-bold">Optimized <span class="text-primary">Logistics</span></h5>
+    <p class="text-muted">Get instant access to an established network of distributors & retailers, always looking for new opportunities.</p>
+  </div>
+</div>
 
       </div>
     </div>
@@ -311,7 +310,7 @@
         </div>
 
         <!-- Step 2 -->
-        <div class="d-flex align-items-start">
+        <div class="d-flex align-items-start mb-4">
           <div class="icon-wrapper rounded-circle shadow-sm me-3">
             <img src="/images/startselling.png" alt="Icon 2" class="img-fluid">
           </div>
@@ -326,7 +325,7 @@
   </div>
 </section>
    
-<section class="py-5 feature-section">
+<section class="py-4 feature-section">
   <div class="container">
     <div class="row align-items-center">
 
@@ -335,7 +334,9 @@
         <div class="d-flex flex-column gap-4">
           <!-- Feature Item 1 -->
           <div class="d-flex align-items-start">
+            <div class="feature1  "> 
             <img src="/images/cross-selling 1.png" alt="Icon 1" class="feature-icon me-3 mb-5" />
+            </div> 
             <div>
               <h5 class="feature-title mx-4">Product Listing</h5>
               <p class="feature-desc mx-4">Pre-launch in-app surveys & feedback directly from retailers and consumers. Launching a product where it fits!</p>
@@ -344,7 +345,9 @@
 
           <!-- Feature Item 2 -->
           <div class="d-flex align-items-start">
+            <div class="feature2">
             <img src="/images/startselling.png" alt="Icon 2" class="feature-icon me-3 mb-5" />
+            </div>
             <div>
               <h5 class="feature-title mx-4">Start Selling</h5>
               <p class="feature-desc mx-4">to our wide network of retailers & distributors</p>
@@ -353,7 +356,10 @@
 
           <!-- Feature Item 3 -->
           <div class="d-flex align-items-start">
+
+            <div class="feature3">
             <img src="/images/cross-selling 1.png" alt="Icon 3" class="feature-icon me-3 mb-5" />
+            </div>
             <div>
               <h5 class="feature-title mx-4">Product Listing</h5>
               <p class="feature-desc mx-4">Pre-launch in-app surveys & feedback directly from retailers and consumers. Launching a product where it fits!</p>
@@ -363,7 +369,7 @@
       </div>
 
       <!-- Right Column -->
-      <div class="col-md-6 text-center">
+      <div class="col-md-6 text-center overview">
         <div class="d-flex flex-wrap justify-content-center gap-3">
           <img src="/images/Overview.png" alt="Graph" class="right-img" />
           <img src="/images/Ellipse 107.png" alt="Chart" class="right-img ellipse" />
@@ -463,7 +469,7 @@
     </div>
 
     <!-- Static Dots (decorative only) -->
-    <div class="mt-4 d-flex justify-content-center gap-2">
+    <div class="mt-4 d-flex justify-content-center gap-2 testimonial-dots">
       <span class="dot bg-primary"></span>
       <span class="dot bg-secondary"></span>
       <span class="dot bg-secondary"></span>
